--- a/.github/workflows/ci-octopus.yml
+++ b/.github/workflows/ci-octopus.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI Octopus
 
 # Controls when the workflow will run
 on:
@@ -34,7 +34,7 @@ jobs:
       - name: Run Helm Package
         run: |
           echo "Launching helm package.. ⎈"
-          helm package $GITHUB_WORKSPACE
+          helm package $GITHUB_WORKSPACE/helm-hello-world
 
       # Octopus OIDC login
       - name: Login to Octopus Deploy
